@@ -342,7 +342,7 @@ gap> Generators(last);
       <A>M</A> is matrix with nonnegative integer coefficients, <A>Ord</A> a term ordering.
       The output is a canonical bases of the congruence <M>\{(x,y)\mid xM=yM\}</M> (see <Cite Key="RGS99"></Cite>). This corresponds with the exponents of the Gröbner basis of the kernel ideal of the morphism <M>x_i\mapsto Y^{m_i}</M>, with <M>m_i</M> the <M>i</M>th row of <M>M</M>.
   <P/>
-    Accespted term orderings are lexicographic (<C>MonomialLexOrdering()</C>), graded lexicographic (<A>MonomialGrlexOrdering()</A>) and reversed graded lexicographic (<A>MonomialGrevlexOrdering()</A>).
+    Accepted term orderings are lexicographic (<C>MonomialLexOrdering()</C>), graded lexicographic (<A>MonomialGrlexOrdering()</A>) and reversed graded lexicographic (<A>MonomialGrevlexOrdering()</A>).
     <Example><![CDATA[
 gap> M:=[[3],[5],[7]];;
 gap> CanonicalBasisOfKernelCongruence(M,MonomialLexOrdering());
@@ -356,6 +356,22 @@ gap> CanonicalBasisOfKernelCongruence(M,MonomialGrlexOrdering());
 gap> CanonicalBasisOfKernelCongruence(M,MonomialGrevlexOrdering());
 [ [ [ 0, 2, 0 ], [ 1, 0, 1 ] ], [ [ 3, 1, 0 ], [ 0, 0, 2 ] ],
   [ [ 4, 0, 0 ], [ 0, 1, 1 ] ] ]
+]]></Example>
+
+    </Description>
+  </ManSection>
+
+  <ManSection>
+    <Func Arg="M" Name="GraverBasis"></Func>
+    <Description>
+      <A>M</A> is matrix with  integer coefficients.
+      The output is a Graver basis for <A>M</A>.
+    <Example><![CDATA[
+gap> gr:=GraverBasis([[3,5,7]]);
+[ [ -7, 0, 3 ], [ -5, 3, 0 ], [ -4, 1, 1 ], [ -3, -1, 2 ], [ -2, -3, 3 ],
+  [ -1, -5, 4 ], [ -1, 2, -1 ], [ 0, -7, 5 ], [ 0, 0, 0 ], [ 0, 7, -5 ],
+  [ 1, -2, 1 ], [ 1, 5, -4 ], [ 2, 3, -3 ], [ 3, 1, -2 ], [ 4, -1, -1 ],
+  [ 5, -3, 0 ], [ 7, 0, -3 ] ]
 ]]></Example>
 
     </Description>
